# codecurator

./: .gitignore  Cargo.toml  README.md
configs/: repos.jsonl
src/: cli.rs  commands.rs  config.rs  deduplication.rs  downloader.rs  error.rs  extractor.rs  fuzzy.rs  logger.rs  main.rs  manifest.rs  source.rs
src/commands/: dedupe.rs  download.rs  extract.rs
stats/: average_chars.sh  count_chars.sh  count_records.sh  count_tokens.sh
